Added token response, wrote docs for api/login
