# app/Http/Controllers/Documentation/FortifyController.php
@@ -21,11 +21,33 @@ class FortifyController extends Controller
             )
         ),
         responses: [
-            new OA\Response(response: 200, description: 'OK')
+            new OA\Response(response: 201, description: 'Created')
         ]
     )]
     public function register()
     {
+    }
 
+    #[OA\Post(
+        path: '/api/login',
+        requestBody: new OA\RequestBody(
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(property: 'email', required: ['true'], type: 'string'),
+                    new OA\Property(property: 'password', required: ['true'], type: 'string')
+                ]
+            )
+        ),
+        responses: [
+            new OA\Response(response: 200, description: 'Logged In', content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(property: 'success', type: 'boolean', default: 'true'),
+                    new OA\Property(property: 'token', type: 'string')
+                ]
+            ))
+        ]
+    )]
+    public function login()
+    {
     }
 }
